# tree-sitter-df

./: .gitignore  .npmignore  AGENTS.md  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  build.zig  build.zig.zon  go.mod  grammar.js  package.json  pom.xml  pyproject.toml  setup.py  tree-sitter.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
bindings/c/: tree-sitter-df.pc.in
bindings/go/: binding.go  binding_test.go
bindings/java/main/io/github/treesitter/jtreesitter/df/: TreeSitterDf.java
bindings/java/test/: TreeSitterDfTest.java
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_df/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterDf/: df.h
bindings/swift/TreeSitterDfTests/: TreeSitterDfTests.swift
bindings/zig/: root.zig  test.zig
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: basic.txt  df.txt
tools/: generate.js
