[package]
name = "tree-sitter-df"
description = "Df grammar for tree-sitter"
version = "0.0.5"
authors = ["Kamil Jakubus <kamil.jakubus@usagi.coffee>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "df"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/usagi-coffee/tree-sitter-df"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.27.0"
